# articulate-wpraise

./: .env.example  .gitignore  CLOUDFLARE_SETUP.md  CoPilot.md  DOCKER_NETWORKS.md  HAPROXY_CONFIG.md  HAPROXY_SETUP.md  LICENSE  README.md  SECURITY.md  TESTING_PHASE1.md  docker-compose.override.yml  docker-compose.production.yml  docker-compose.yml  refactor_endpoints.py  spawn.py  test_user_management.py
mcp-server/: README-CODEGEN.md  mypy.ini  pyproject.toml  schema.json
mcp-server/migrations/: 001_create_tenants_table.sql  002_tenant_views_and_domains.sql  003_email_verification_and_password_reset.sql  004_rename_tables_to_articulate.sql  005_tenant_user_wp_mapping.sql
mcp-server/scripts/: generate_mcp_from_graphql.py  generate_schemas.py  introspect_graphql.py  run-migrations.py
mcp-server/src/articulate_mcp/: __init__.py  __main__.py  activity_manager.py  ai_preferences.py  audit.py  cache.py  capability_checker.py  connection_manager.py  context_helper.py  database.py  decorators.py  email_service.py  errors.py  health.py  invite_manager.py  json_utils.py  (+14 more)
mcp-server/tests/: README.md  conftest.py  test_blocks.py  test_capability_checker.py  test_connection_manager.py  test_context_helper.py  test_decorators.py  test_docker_ops.py  test_federation_smoke.py  test_learnpress.py  test_learnpress_debug.py  test_learnpress_routes.py  test_org_api_keys.py  test_preview.py  test_product_manager.py  test_routing.py  test_routing_proxy.py  test_tenant_composer.py  test_tenant_crypto.py  test_tenant_manager_new.py  test_tool_access.py  test_user_manager.py  test_wp_user_sync.py
(+458 files in other folders)
