[project]
name = "articulate-mcp"
version = "0.1.0"
description = "MCP server for WordPress integration via WPGraphQL"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "uvicorn>=0.30.0",
    "redis>=5.0.0",
    "celery>=5.3.0",
    "aiomysql>=0.2.0",
    "bcrypt>=4.0.0",
    "cryptography>=41.0.0",
    "Pillow>=10.0.0",
    "anthropic>=0.40.0",
    "python-on-whales>=0.70.0",
    "Jinja2>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pyyaml>=6.0",
    "mypy>=1.0",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["tests"]
